# GreenTensor

./: .gitignore  ANALYSIS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GreenTensor_Theory.tex  GreenTensor_Theory_verification.md  IMPLEMENTATION_REVIEW.md  LICENSE  README.rst  VERIFICATION.md  greentensor.py  lin_polar.py  pyproject.toml  requirements.txt  validate_anisotropic_multilayer.py
docs/: api.rst  conf.py  index.rst  intro.rst  requirements.in  requirements.txt  solvers.rst  usage.rst
examples/: complex_geometry_demo.py  composite_primitives_demo.py
examples/Example 1 - Luneburg Lens Bistatic RCS/: Luneburg Lens Bistatic RCS.py  README.md  test.py
examples/Example 2 - Luneburg Lens Scattering Diagram/: Ephi=0_from_HFSS.csv  Ephi=90_from_HFSS.csv  Luneburg_Lens_Scattering_Diagram.py  README.md  plot_compare_GreenTensor_HFSS.py  plot_polar.py  plot_rectengular.py
examples/Example 3 - Luneburg Lens Scattering Diagram for UAV/: Luneburg_Lens_Scattering_Diagram.py
examples/Example 3 - Luneburg Lens for UAV Scattering Diagram/: Luneburg_Lens_Scattering_Diagram.py
examples/Example 3 - Luneburg Lens for UAV Scattering Diagram /: Luneburg_Lens_Scattering_Diagram.py
examples/Example 4 - Metal sphere with a shelter/: 01_sphere.py
examples/Example 5 - Maxwell lens/: 01_sphere_15.py  01_sphere_314.py
green_tensor/: 01_sphere.py  03_decart_plane.py  Bistatic_RCS_lin+circle_polar.py  Bistatic_RCS_lin_polar.py  __init__.py  calc.py  calc.py.bak_multilayer_2026-05-05  cone.py  cylinder.py  decompose.py  ebcm.py  ellipsoid.py  examples.json  gmm.py  lin_polar.py  mie_core.py  scatterer.py  solvers.py  sphere_anisotropic.py  sphere_core.py  spheroid.py  tmatrix.py  vswf.py
green_tensor/legacy/: 02_cilindre.py  03_decart_dipol.py  03_decart_plane.py  Bistatic_RCS_lin+circle_polar.py  Bistatic_RCS_lin_polar.py  README.md  __init__.py  lin_polar.py
landing/: README.md  app-rcs.js  calc.py  guides.html  index.html  site.webmanifest  solver.html  studio.html
landing/studio/css/: style.css
landing/studio/engine/: manifest.json  presets.json
landing/studio/engine/_source/: REGEN.md  presets.py
landing/studio/engine/green_tensor/: 01_sphere.py  __init__.py  gmm.py  scatterer.py  solvers.py
landing/studio/engine/studio/: __init__.py  compute.py  library_bridge.py  nearfield_sphere.py
landing/studio/js/: app.js  editor3d.js  input.js  presets.js  pybridge.js  results.js
outputs/: distance_sweep_results.npz  x_sweep_results.npz
tests/: _loader.py  analytic_cylinder.py  analytic_mie.py  run_all.py  test_composite.py  test_cone.py  test_cylinder.py  test_cylinder_layered.py  test_decompose.py  test_ebcm.py  test_ellipsoid.py  test_finite_cylinder.py  test_gmm.py  test_hfss_reference.py  test_mg_correction.py  test_mie_core.py  test_rotation.py  test_solvers.py  test_sphere_complex.py  test_sphere_magnetic.py  test_sphere_mie.py  test_sphere_multilayer.py  test_spheroid.py  test_tmatrix.py  test_vswf.py
tests/references/: README.md
webapp/: README.md  compute.py  server.py
webapp/static/: app.js  index.html  style.css
