[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "greentensor"
authors = [
    {name = "D.V. Denisov", email = "dv.denisov@urfu.ru"},
    {name = "V.Ya. Noskov", email = "v.y.noskov@urfu.ru"},
    {name = "I.O. Skumatenko", email = "ilya.skumatenko@urfu.ru"},
]
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["electromagnetics", "scattering", "green-tensor", "mie", "t-matrix", "gmm", "luneburg-lens", "rcs"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
vie = ["numba>=0.59", "scikit-image>=0.22", "tqdm>=4.66"]
examples = ["pandas>=2.0"]
docs = ["sphinx>=7", "sphinx-rtd-theme>=2"]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.urls]
Homepage = "https://github.com/Den1sovDm1triy/GreenTensor"
Documentation = "https://greentensor.readthedocs.io"

# Дистрибутив называется `greentensor`, импортируемый пакет — `green_tensor`.
# Distribution name is `greentensor`; the import package is `green_tensor`.
[tool.flit.module]
name = "green_tensor"
